--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@desk-clock/api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "@desk-clock/devices": ["libs/devices/src/index.ts"]
+      "@desk-clock/devices": ["libs/devices/src/index.ts"],
+      "@desk-clock/settings": ["libs/settings/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
