--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/angular": "15.0.4",
     "@prisma/client": "^4.5.0",
+    "ng-mocks": "^14.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
